--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
     display: flex;
 }
 
-ul {
+nav ul {
     list-style-type: none;
     padding: 1.5em;
     overflow: hidden;
@@ -44,9 +44,9 @@ figure a :hover{
 }
 header img {
     scale: 24%;
-    margin: -2cm;
-    margin-top: -100px;
-    margin-bottom: -100px;
+    margin: -5em;
+    margin-top: -6em;
+    margin-bottom: -6em;
 }
 body{
     background: #252764;
@@ -78,7 +78,7 @@ h2{
 }
 p{
     font-size: 1.2em;
-
+    line-height: 1.4;
 }
 main div h2{
     margin-left: 10em;
@@ -115,7 +115,7 @@ div {
 .zijtekst{
     max-width: 15%;
     border-radius: 1em;
-    padding: 5px;
+    padding: 0.3em;
     font-size: 1.5em;
     margin: 1em;
 }
@@ -128,6 +128,7 @@ figcaption{
     align-content: center;
     font-size: 1.05em;
     margin: 1.001em;
+    line-height: 1.4;
 }
 footer {
     display: flex;
@@ -158,7 +159,7 @@ footer {
 /*games*/
 
 table, th, td {
-    border: 1px solid white;
+    border: 0.5em solid #0071BC;
     border-collapse: collapse;
     padding: 1.5em;
 }
@@ -214,13 +215,17 @@ video {
     justify-content: center;
     margin-bottom: 0.5em;
 }
-section{
+
+.lineupMain ul{
     display: flex;
     justify-content: center;
-    margin-left: 25em;
-    margin-top: 5em;
+    gap: 2em;
+    font-size: 2em;
 }
-
+.lineupMain ul li:first-child {
+    font-weight: bold;
+    list-style: none;
+  }
 /*overons*/
 .overons{
     display: flex;
@@ -250,15 +255,25 @@ section{
     border-radius: 3.9em;
 }
 /*spelerscherm*/
-
 .spelerMain img{
-    width: 20%;
+    width: 22em;
     margin-left: 1em;
 }
 
-.spelerMain div div{
+.spelerMain ul{
     flex-direction: column;
     display: flex;
     font-size: 2em;
+    margin-left: -7em;
+    margin-top: 6em;
+    gap: 2em;
+}
+.spelerMain section{
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     margin-left: 1em;
+}
+.spelerMain{
+    display: flex;
 }
